[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cppmanlite"
version = "0.1.4"
description = "Lightweight serverless C++ documentation lookup — pure Python, no C deps"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["cpp", "cplusplus", "cppreference", "documentation", "cppman"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://dive4dec.github.io/cppmanlite/"
Repository = "https://github.com/dive4dec/cppmanlite"

[tool.setuptools.packages.find]
include = ["cppmanlite*"]

[tool.setuptools.package-data]
cppmanlite = ["data/*.json"]
